version 1.6.3, in progress
- Add facility for bootstrap analysis in GUI
- Model table: fixes for including panel models
- Fix bug in panel autocorrelation test (lmtest command)
- Add fft() matrix function (Fast Fourier Transform)

3/24/2007 version 1.6.2
- Add Poisson distribution to p-value finder
- Fix breakage in GUI "graph page" apparatus
- Graph page: give color / monochrome option
- Bivariate scatterplots: give the option of showing various sorts
  of fitted line: linear, quadratic, inverse or loess
- Monochrome EMF graphs: make sure point types are distinct for
  different series
- Internal clean-up of the graphing code
- Make frequency plots more configurable via the GUI
- Fix memory leaks in GUI graph editor dialog
- Bugfix: estimating models inside nested functions could cause
  a crash
- Session icon window: don't display temporary matrices,
  generated within functions
- Icon window: fix display on one-character object names
- Fix memory leak when generating some sorts of matrices
- Add option of using Parzen or Quadratic Spectral kernel (the 
  default is Bartlett) when computing HAC covariance matrix
- Add a toolbar to windows that display lists of files
- Several fixes and enhancements for function package editor
- Fix for "omit" command in relation to arbond estimation
- Correlation matrix, etc, in GUI: don't disable menu items
  if only one variable is selected
- System estimation: fix breakage of the "save=" mechanism
  for residuals and/or fitted values
- gmm: improve syntax handling for orthogonality conditions
- Update the API documentation (still very much incomplete)
- Update gnuplot to version 4.2.0 in the Windows installer    

2/26/2007 version 1.6.1
- Revamp for internal "genr" mechanism plus some user-visible
  changes to genr
- Make the "delete" command do what the manual says
- Doing "Edit attributes" on a newly generated variable: you
  can edit the formula and hence change the content of the variable