@@ -3,6 +3,7 @@ version 1.6.3, in progress
 - Model table: fixes for including panel models
 - Fix bug in panel autocorrelation test (lmtest command)
 - Add fft() matrix function (Fast Fourier Transform)
+- Multiple fixes for session icon handling
 
 3/24/2007 version 1.6.2
 - Add Poisson distribution to p-value finder
